--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ ul {
 
 ul li a {
     text-decoration: none;
-    color:  #66FFCC;
+    color: #5F9EA0;
     font-weight: bold;
 }
 
@@ -33,7 +33,7 @@ input, textarea {
 }
 
 button {
-    background-color: #66FFCC;
+    background-color: #FAFAD2;
     color: white;
     padding: 10px;
     margin-top: 15px;
@@ -43,5 +43,5 @@ button {
 }
 
 button:hover {
-    background-color: #66FFCC;
+    background-color: #FFF5EE;
 }
